# django_puml

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
infra/clickhouse/: Dockerfile  clickhouse_config.xml
infra/clickhouse/clickhouse_init/: 001_create_work_volume_record.sql
infra/nginx/: default.conf
infra/postgres/: Dockerfile
src/: Dockerfile  entrypoint.sh
src/core/: .env.example  settings.py  urls.py
src/plan/: admin.py  models.py  serializers.py  urls.py  views.py
src/plan/migrations/: 0001_initial.py  0002_initial.py  0003_create_groups.py  0004_create_factories_and_users.py
src/plan/services/: __init__.py  work_volume.py
src/users/migrations/: 0001_initial.py
src/utils/: __init__.py
src/utils/clients/: dbses.py
